# terminal

./: .gitignore  README.md  download_cosmos.py  download_models.py  download_nurec.py  download_physicalai_av.py  download_physicalai_cameras.py  lfm_agi_system.py  requirements.txt  run_setup.py  setup_cache_optimization.py  setup_carla.py  setup_clara.py
computer_use_vla/: README.md  pyproject.toml
computer_use_vla/configs/: default_config.yaml
computer_use_vla/examples/: run_agent.py
computer_use_vla/src/: __init__.py  agent.py
computer_use_vla/src/action_space/: __init__.py  computer_action_space.py
computer_use_vla/src/controller/: __init__.py  computer_controller.py
computer_use_vla/src/diffusion/: __init__.py  action_flow_matching.py
computer_use_vla/src/models/: __init__.py  computer_use_vla.py  lfm_vl_model.py
computer_use_vla/src/reasoning/: __init__.py
computer_use_vla/src/utils/: __init__.py
computer_use_vla/tests/: test_action_space.py
docker/: Dockerfile.agi  docker-compose.yml
minvla/: README.md  data.py  demo.py  minvla.py  train.py
terminai/: README.md  cli.py  pyproject.toml
terminai/src/: __init__.py
terminai/src/a2a/: __init__.py  protocol.py
terminai/src/core/: __init__.py  agent.py  lfm_agent.py
terminai/src/fleet/: __init__.py  commander.py
terminai/src/llm/: __init__.py  lfm_provider.py  providers.py
terminai/src/mcp/: __init__.py  client.py
terminai/src/pty/: __init__.py  native_pty.py
terminai/src/tools/: __init__.py
