[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-use-vla"
version = "0.1.0"
description = "Vision-Language-Action model for computer use - Inspired by NVIDIA Alpamayo"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "LFM AGI Project"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["vla", "computer-use", "vision-language", "ai-agent", "automation"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
controller = [
    "pyautogui>=0.9.54",
    "python-xlib>=0.33; sys_platform == 'linux'",
]
lfm = [
    # LFM 2.5 VL specific dependencies
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
]
qwen = [
    # Qwen-VL specific dependencies
    "accelerate>=0.25.0",
    "flash-attn>=2.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "computer-use-vla[controller,lfm,qwen,dev]",
]

[project.scripts]
cu-agent = "computer_use_vla.cli:main"

[project.urls]
Homepage = "https://github.com/lfm-agi/computer-use-vla"
Documentation = "https://github.com/lfm-agi/computer-use-vla#readme"
Repository = "https://github.com/lfm-agi/computer-use-vla"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
"computer_use_vla" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
