[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminai"
version = "1.0.0"
description = "Sovereign System Operator - AI agent with native PTY and OODA reasoning"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "LFM AGI Project"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "ai", "agent", "terminal", "pty", "gemini",
    "automation", "devops", "sysadmin", "cli",
    "mcp", "a2a", "fleet"
]

dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
gemini = [
    "google-generativeai>=0.5.0",
]
ollama = [
    # Ollama uses HTTP API, no extra deps
]
mcp = [
    # MCP uses subprocess to call npx
]
full = [
    "terminai[gemini]",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
terminai = "cli:main"

[project.urls]
Homepage = "https://github.com/lfm-agi/terminai"
Documentation = "https://github.com/lfm-agi/terminai#readme"
Repository = "https://github.com/lfm-agi/terminai"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
